# calendar-telegram-bot

./: .gitignore  Cargo.toml  README.md  package.json
src/: main.rs
src/commands/: mod.rs
src/models/: event.rs  mod.rs  provider.rs
src/providers/: google_calendar.rs  icloud_calendar.rs  mod.rs
