[package]
name = "calendar_telegram_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
env_logger = "0.10"
dotenv = "0.15.0"
teloxide = "0.12.2"
tokio = { version = "1", features = ["full"] }
google-calendar3 = "4.0.1"
reqwest = "0.11.14"
